--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1647,6 +1647,17 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "ee5c65ff": {
+          "id": "ee5c65ff",
+          "path": "backend/usuariosadmin.php",
+          "output": "backend/usuariosadmin.php",
+          "name": "usuariosadmin.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
